Avoid resetting global shortcut keys without explicit user input

KGlobalAccelD tries to do a noble and a reasonable (at quick glance)
thing such as manage contested global shortcut keys. But KGlobalAccelD
can even do that without user's knowledge. For example, with some
package managers, applications can be uninstalled and installed, there
is a lot of uncertainty.

This change makes KGlobalAccelD to be more conservative so it doesn't
try to reset user configuration without user's input. If the user wants
to re-assign a global shortcut, they will be asked that in system
settings. If a particular shortcut is contested, then KGlobalAccelD will
try to make the best of it and activate an action that was registered
with that shortcut first.

BUG: 484597